Actions
Bug #4813
closedtest_minitest.rb failed on win32-x64
Bug #4813:
test_minitest.rb failed on win32-x64
Description
minitest.rb with external command 'diff' may fail on (at least on my) win32-x64 ruby.
Above patch fixed this.
--- lib/minitest/unit.rb~ 2011-06-01 22:09:05.000000000 +0900
+++ lib/minitest/unit.rb 2011-06-02 00:44:19.000000000 +0900
@@ -121,9 +121,11 @@ module MiniTest
Updated by zenspider (Ryan Davis) over 15 years ago
- Status changed from Open to Closed
- Assignee set to zenspider (Ryan Davis)
Thanks! I'll have this merged back into core in a sec. This will break other tests (intentionally) so I need to write up a ticket for sora first.
Updated by usa (Usaku NAKAMURA) over 15 years ago
wait, wait...
this is ruby's bug not minitest's.
IO#rewind do flush internally.
so, if this patch corrects some bugs, the internal flush process is something wrong.
Actions