* io.c (io_flush, rb_io_flush): need to fsync() when ruby calls internal   flush. [ruby-core:36670] [Bug #4813]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@31901 b2dd03c8-39d4-4d8f-98ff-823fe69b080e